cdk-lab-web-server/cdk.out/NetworkStack.template.json
{
 "Resources": {
  "MyVpcF9F0CA6F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/Resource"
   }
  },
  "MyVpcPublicSubnetSubnet1Subnet60D1320D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/Subnet"
   }
  },
  "MyVpcPublicSubnetSubnet1RouteTable00654ADB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/RouteTable"
   }
  },
  "MyVpcPublicSubnetSubnet1RouteTableAssociation2CCE9CDC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnetSubnet1RouteTable00654ADB"
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnetSubnet1Subnet60D1320D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcPublicSubnetSubnet1DefaultRoute2D379878": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnetSubnet1RouteTable00654ADB"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/DefaultRoute"
   }
  },
  "MyVpcPublicSubnetSubnet1EIP5C2C4ED5": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/EIP"
   }
  },
  "MyVpcPublicSubnetSubnet1NATGateway9744F529": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcPublicSubnetSubnet1EIP5C2C4ED5",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnetSubnet1Subnet60D1320D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MyVpcPublicSubnetSubnet1DefaultRoute2D379878",
    "MyVpcPublicSubnetSubnet1RouteTableAssociation2CCE9CDC"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet1/NATGateway"
   }
  },
  "MyVpcPublicSubnetSubnet2Subnet122ADB1B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/Subnet"
   }
  },
  "MyVpcPublicSubnetSubnet2RouteTableC647F413": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/RouteTable"
   }
  },
  "MyVpcPublicSubnetSubnet2RouteTableAssociation7AF8666E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnetSubnet2RouteTableC647F413"
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnetSubnet2Subnet122ADB1B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcPublicSubnetSubnet2DefaultRouteAFC76296": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnetSubnet2RouteTableC647F413"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/DefaultRoute"
   }
  },
  "MyVpcPublicSubnetSubnet2EIPF93892AD": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/EIP"
   }
  },
  "MyVpcPublicSubnetSubnet2NATGateway883B336D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcPublicSubnetSubnet2EIPF93892AD",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnetSubnet2Subnet122ADB1B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PublicSubnetSubnet2"
     }
    ]
   },
   "DependsOn": [
    "MyVpcPublicSubnetSubnet2DefaultRouteAFC76296",
    "MyVpcPublicSubnetSubnet2RouteTableAssociation7AF8666E"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PublicSubnetSubnet2/NATGateway"
   }
  },
  "MyVpcPrivateSubnetSubnet1SubnetE8BD536C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet1/Subnet"
   }
  },
  "MyVpcPrivateSubnetSubnet1RouteTableD918A34F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet1/RouteTable"
   }
  },
  "MyVpcPrivateSubnetSubnet1RouteTableAssociation2811D7AF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnetSubnet1RouteTableD918A34F"
    },
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnetSubnet1SubnetE8BD536C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcPrivateSubnetSubnet1DefaultRoute58825934": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcPublicSubnetSubnet1NATGateway9744F529"
    },
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnetSubnet1RouteTableD918A34F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet1/DefaultRoute"
   }
  },
  "MyVpcPrivateSubnetSubnet2SubnetE3BFCF91": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet2/Subnet"
   }
  },
  "MyVpcPrivateSubnetSubnet2RouteTable83C86AF7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet2/RouteTable"
   }
  },
  "MyVpcPrivateSubnetSubnet2RouteTableAssociationE7A10A88": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnetSubnet2RouteTable83C86AF7"
    },
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnetSubnet2SubnetE3BFCF91"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcPrivateSubnetSubnet2DefaultRoute0FED656C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcPublicSubnetSubnet2NATGateway883B336D"
    },
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnetSubnet2RouteTable83C86AF7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/PrivateSubnetSubnet2/DefaultRoute"
   }
  },
  "MyVpcIGW5C4A4F63": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/IGW"
   }
  },
  "MyVpcVPCGW488ACE0D": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    },
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/VPCGW"
   }
  },
  "MyVpcRestrictDefaultSecurityGroupCustomResourceA4FCCD62": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "MyVpcF9F0CA6F",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "911167900137"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "NetworkStack/MyVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:911167900137:security-group/",
             {
              "Fn::GetAtt": [
               "MyVpcF9F0CA6F",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-911167900137-us-east-1",
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOQWvCQBCFf4v3zZZEKPQYQyleZEmK1zJZRx1NZsvOrEHE/y7B4p56eu998xheZcv3ypYLmKTwu3MxUG9vnYI/G5jkB31lb9tfb5o9b11jXOoH8l3qGXVm2bUhKX5DP2DmmdUiwRMoBX6VZ/O5drNsQL9AcYKrcZEuoJgfr1kxMr4KzyV/qVYFfxyR9W5alJCiR9Mk0TDmuOd/Ti6GC+0wrkDQ1CKoncKB+HA37qrHwG9LW5b2Y3ESoiImVhrRtk99AAt3hOM6AQAA"
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefMyVpcF9F0CA6FBC8737E9": {
   "Value": {
    "Ref": "MyVpcF9F0CA6F"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefMyVpcF9F0CA6FBC8737E9"
   }
  },
  "ExportsOutputRefMyVpcPublicSubnetSubnet1Subnet60D1320D07CD3AA8": {
   "Value": {
    "Ref": "MyVpcPublicSubnetSubnet1Subnet60D1320D"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefMyVpcPublicSubnetSubnet1Subnet60D1320D07CD3AA8"
   }
  },
  "ExportsOutputRefMyVpcPublicSubnetSubnet2Subnet122ADB1BBA7F79F4": {
   "Value": {
    "Ref": "MyVpcPublicSubnetSubnet2Subnet122ADB1B"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefMyVpcPublicSubnetSubnet2Subnet122ADB1BBA7F79F4"
   }
  },
  "ExportsOutputRefMyVpcPrivateSubnetSubnet1SubnetE8BD536C931BA2A6": {
   "Value": {
    "Ref": "MyVpcPrivateSubnetSubnet1SubnetE8BD536C"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefMyVpcPrivateSubnetSubnet1SubnetE8BD536C931BA2A6"
   }
  },
  "ExportsOutputRefMyVpcPrivateSubnetSubnet2SubnetE3BFCF913107F7E7": {
   "Value": {
    "Ref": "MyVpcPrivateSubnetSubnet2SubnetE3BFCF91"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefMyVpcPrivateSubnetSubnet2SubnetE3BFCF913107F7E7"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
